--- a/source/sass/blocks/specif-list.scss
+++ b/source/sass/blocks/specif-list.scss
@@ -13,6 +13,12 @@
   }
 
   .specif-list {
-    margin-top: 22px;
+    margin-top: 10px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .specif-list {
+    padding-top: 16px;
   }
 }
