--- a/source/sass/blocks/page-inner.scss
+++ b/source/sass/blocks/page-inner.scss
@@ -1,4 +1,5 @@
 .page-inner__title-wrap {
+  position: relative;
   padding: 75px 20px;
 
   background-color: $white-1;
@@ -19,7 +20,18 @@
 
 @media (min-width: 768px) {
   .page-inner__title-wrap {
-    margin-bottom: 50px;
+    margin-bottom: 52px;
+  }
+
+  .page-inner__title-wrap::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: "";
+
+    width: 100%;
+    height: 14px;
+    background-image: url("../img/bg-zigzag-fill.svg");
   }
 
   .page-inner__title {
@@ -29,7 +41,12 @@
 }
 
 @media (min-width: 1150px) {
+  .page-inner__title-wrap {
+    padding-bottom: 105px;
+  }
+
   .page-inner__title {
+    padding-top: 20px;
     font-size: 53px;
   }
 }
