--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -44,6 +44,17 @@
     border-top: 1px solid $white-2;
   }
 
+  .page-main__title-wrap::after {
+    position: absolute;
+    bottom: 0;
+    left: 10px;
+    content: "";
+
+    width: 100%;
+    height: 14px;
+    background-image: url("../img/bg-zigzag-fill.svg");
+  }
+
   .page-main__title {
     width: 500px;
     margin-top: 65px;
@@ -55,6 +66,10 @@
   .page-main__title-wrap {
     margin-bottom: 0;
     background-image: url("../img/hero-desktop@1x.jpg");
+  }
+
+  .page-main__title-wrap::after {
+    left: 0;
   }
 
   .page-main__title {
