--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -13,19 +13,19 @@
   align-items: center;
 }
 
-.user-list__link--icon {
+.user-list__link-icon {
   margin-right: 25px;
   fill: $black-2;
   opacity: 0.2;
 }
 
-.user-list__item:hover .user-list__link--icon,
-.user-list__item:focus .user-list__link--icon {
+.user-list__item:hover .user-list__link-icon,
+.user-list__item:focus .user-list__link-icon {
   fill: $seafoam-blue;
   opacity: 1;
 }
 
-.user-list__item:active .user-list__link--icon {
+.user-list__item:active .user-list__link-icon {
   fill: $seafoam-blue;
   opacity: 0.3;
 }
@@ -58,15 +58,19 @@
 
   .user-list__item {
     padding-bottom: 35px;
-    padding-right: 25px;
+    padding-right: 20px;
 
     border-top: none;
     border-left: 1px solid $white-2;
   }
 
-  .user-list__link--icon {
+  .user-list__link-icon {
     margin-top: 7px;
-    margin-right: 20px;
+    margin-right: 13px;
+  }
+
+  .user-list__link-icon--cart {
+    margin-right: 30px;
   }
 
   .user-list__link--note {
