--- a/source/sass/blocks/process.scss
+++ b/source/sass/blocks/process.scss
@@ -128,7 +128,7 @@
   .process__wrapper {
     position: relative;
     margin-bottom: 100px;
-    padding-top: 0;
+    padding-top: 5px;
     padding-bottom: 0;
 
     flex-wrap: wrap;
@@ -157,7 +157,7 @@
 
   .process__video {
     position: absolute;
-    top: 0;
+    top: 5px;
     left: 50px;
   }
 
