--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -46,12 +46,12 @@
 
   .page-main__title-wrap::after {
     position: absolute;
-    bottom: 0;
+    bottom: -3px;
     left: 10px;
     content: "";
 
     width: 100%;
-    height: 14px;
+    height: 20px;
     background-image: url("../img/bg-zigzag-fill.svg");
   }
 
