--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,4 +1,6 @@
 .main-nav {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,18 +31,56 @@
 .main-nav__toggle {
   position: absolute;
   top: 30px;
-  right: 30px;
+  right: 35px;
+  z-index: 3;
 
+  display: block;
   width: 20px;
   height: 15px;
+
   background-color: transparent;
   border: none;
-  background-image: url("../img/icon-menu-open.svg");
-  background-repeat: no-repeat;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  content: url("../img/icon-menu-open.svg");
+}
+
+.main-nav--opened .main-nav__toggle::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  content: url("../img/icon-menu-close.svg");
 }
 
 .main-nav__service {
   display: none;
+}
+
+@media (max-width: 767px) {
+  .main-nav--closed .site-list {
+    display: none;
+  }
+
+  .main-nav--closed .user-list {
+    display: none;
+  }
+
+  .main-nav--opened .main-nav__list {
+    display: block;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__list {
+    position: static;
+    display: block;
+  }
 }
 
 @media (min-width: 768px) {
