--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -31,6 +31,17 @@
 }
 
 @media (min-width: 768px) {
+  .page-main::after {
+    position: absolute;
+    bottom: -3px;
+    left: 10px;
+    content: "";
+
+    width: 100%;
+    height: 20px;
+    background-image: url("../img/bg-zigzag-fill.svg");
+  }
+
   .page-main__title-wrap {
     display: flex;
     flex-direction: column;
@@ -42,17 +53,6 @@
     padding: 0 50px;
     background-image: url("../img/hero-tablet@1x.jpg");
     border-top: 1px solid $white-2;
-  }
-
-  .page-main__title-wrap::after {
-    position: absolute;
-    bottom: -3px;
-    left: 10px;
-    content: "";
-
-    width: 100%;
-    height: 20px;
-    background-image: url("../img/bg-zigzag-fill.svg");
   }
 
   .page-main__title {
