--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 @import "blocks/user-list.scss";
 @import "blocks/stock-list.scss";
 @import "blocks/catalog-main.scss";
+@import "blocks/catalog-inner.scss";
 @import "blocks/promo.scss";
 @import "blocks/specif-list.scss";
 @import "blocks/advantages.scss";
