--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -13,7 +13,6 @@
   padding: 0;
   padding-right: 50px;
 
-  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: bold;
 
@@ -47,11 +46,12 @@
   }
 
   .advantages__item {
-    flex-basis: 50%;
+    width: 330px;
     min-height: 160px;
+
     margin-bottom: 0;
     padding-top: 20px;
-    padding-right: 40px;
+    padding-left: 5px;
 
     font-size: 20px;
     line-height: 1;
@@ -72,7 +72,7 @@
   }
 
   .advantages__item--support {
-    padding-top: 30px;
+    padding-top: 28px;
     order: 4;
   }
 
@@ -82,6 +82,7 @@
   }
 
   .advantages__item--gift {
+    padding-top: 16px;
     order: 6;
   }
 }
@@ -104,15 +105,21 @@
   }
 
   .advantages__item {
+    width: 350px;
     margin-bottom: 0;
-    padding-right: 57px;
+    padding-right: 50px;
   }
 
   .advantages__item--style {
+    padding-top: 20px;
     padding-right: 90px;
   }
 
   .advantages__item--like {
     padding-right: 110px;
+  }
+
+  .advantages__item--support {
+    padding-top: 24px;
   }
 }
