--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -11,12 +11,11 @@
   min-width: 320px;
   margin: 0;
   padding-left: 0;
-
-  /*display: none;*/
 }
 
 .main-nav__logo {
   padding: 17px 115px;
+  display: flex;
 }
 
 .main-nav__logo[href]:hover,
@@ -122,11 +121,8 @@
   }
 
   .main-nav__logo {
-    flex-basis: 25%;
-    padding-right: 90px;
-    padding-left: 40px;
-
-    justify-content: center;
+    flex-basis: 22%;
+    justify-content: flex-start;
     order: 2;
   }
 
