--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -46,18 +46,17 @@
     position: static;
     flex-basis: 40%;
     padding-left: 50px;
+    display: flex;
+    justify-content: flex-start;
   }
 
   .site-list__item {
-    padding: 30px 35px 30px 0;
+    padding: 30px 0;
   }
 
   .site-list__item:first-child {
+    padding-right: 30px;
     border-right: 1px solid $white-2;
-  }
-
-  .site-list__item:nth-child(2n) {
-    padding-left: 35px;
   }
 
   .site-list__link {
