--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -14,6 +14,7 @@
 }
 
 .main-nav__logo {
+  position: relative;
   padding: 17px 115px;
   display: flex;
 }
@@ -30,7 +31,7 @@
 .main-nav__toggle {
   position: absolute;
   top: 30px;
-  right: 35px;
+  right: 30px;
   z-index: 3;
 
   display: block;
@@ -50,7 +51,7 @@
 
 .main-nav--opened .main-nav__toggle::after {
   position: absolute;
-  top: 0;
+  top: -5px;
   right: 0;
   content: url("../img/icon-menu-close.svg");
 }
@@ -60,10 +61,7 @@
 }
 
 @media (max-width: 767px) {
-  .main-nav--closed .site-list {
-    display: none;
-  }
-
+  .main-nav--closed .site-list,
   .main-nav--closed .user-list {
     display: none;
   }
