--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -144,12 +144,12 @@
   }
 
   .promo__price-wrap {
-    margin-top: -135px;
+    margin-top: -140px;
     margin-left: 55px;
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
   }
 
   .promo__price {
