--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -15,3 +15,8 @@ $seafoam-blue-1: #59d5bc;
 $seafoam-blue-2: #62d1ba;
 $greeny-blue: #56c3b2;
 $greeny-blue-1: #46c1ae;
+
+/*screen resolution*/
+
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
