--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -28,13 +28,18 @@
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 575px auto;
+  }
 }
 
 @media (min-width: 768px) {
   .page-main::after {
     position: absolute;
     bottom: -3px;
-    left: 10px;
+    left: 9px;
     content: "";
 
     width: 100%;
@@ -53,6 +58,11 @@
     padding: 0 50px;
     background-image: url("../img/hero-tablet@1x.jpg");
     border-top: 1px solid $white-2;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+      background-size: 1150px auto;
+    }
   }
 
   .page-main__title {
@@ -63,13 +73,18 @@
 }
 
 @media (min-width: 1150px) {
+  .page-main::after {
+    left: 25px;
+  }
+
   .page-main__title-wrap {
     margin-bottom: 0;
     background-image: url("../img/hero-desktop@1x.jpg");
-  }
 
-  .page-main__title-wrap::after {
-    left: 0;
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+      background-size: 1150px auto;
+    }
   }
 
   .page-main__title {
