--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -5,12 +5,7 @@
 }
 
 .reviews__wrapper {
-  padding-bottom: 55px;
-
-  background-image: url("../img/bg-zigzag-line.svg");
-  background-repeat: repeat-x;
-  background-size: auto 6px;
-  background-position: 0 100%;
+  padding-bottom: 15px;
 }
 
 .reviews__block {
@@ -21,7 +16,6 @@
   padding-top: 7px;
   padding-bottom: 30px;
 
-  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 15px;
   font-weight: normal;
 
@@ -36,7 +30,6 @@
 }
 
 .reviews__author-nickname {
-  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: normal;
   font-style: normal;
@@ -96,17 +89,16 @@
     position: relative;
 
     padding-top: 60px;
-    padding-bottom: 130px;
+    padding-bottom: 90px;
 
-    background-size: auto 15px;
-  }
+    background-image: url("../img/review@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 0 10px;
 
-  .reviews__wrapper::before {
-    position: absolute;
-    z-index: -1;
-    top: 10px;
-    left: 0;
-    content: url("../img/review@1x.jpg");
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/review@2x.jpg");
+      background-size: 350px 457px;
+    }
   }
 
   .reviews__description {
@@ -140,7 +132,7 @@
 
   .reviews__nav {
     position: absolute;
-    bottom: 95px;
+    bottom: 55px;
     right: 50px;
 
     width: 175px;
@@ -155,17 +147,10 @@
 @media (min-width: 1150px) {
   .reviews__wrapper {
     padding-top: 42px;
-    padding-bottom: 190px;
+    padding-bottom: 130px;
     padding-left: 225px;
 
-    background-repeat: no-repeat;
-    background-size: 1050px 23px;
-    background-position: 50% 100%;
-  }
-
-  .reviews__wrapper::before {
-    top: 0;
-    left: 50px;
+    background-position: 50px 0;
   }
 
   .reviews__description {
@@ -175,10 +160,11 @@
 
   .reviews__author {
     width: 350px;
+    padding-top: 6px;
   }
 
   .reviews__author-name {
-    padding-bottom: 10px;
+    font-size: 17px;
   }
 
   .reviews__link {
@@ -187,7 +173,7 @@
   }
 
   .reviews__nav {
-    bottom: 160px;
+    bottom: 95px;
     right: 50px;
   }
 }
