--- a/source/sass/blocks/modal-popup.scss
+++ b/source/sass/blocks/modal-popup.scss
@@ -1,12 +1,19 @@
 .modal-popup {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+
   width: 320px;
   margin: 0 auto;
   padding: 35px 30px;
 
+  display: none;
+
   border: 1px solid $grey-2;
   box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
-
-  display: none;
+  background-color: $white;
 }
 
 .modal-show {
