--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,3 +29,4 @@
 @import "blocks/order.scss";
 @import "blocks/order-form.scss";
 @import "blocks/modal-popup.scss";
+@import "blocks/overlay.scss";
