--- a/source/sass/blocks/modal-popup.scss
+++ b/source/sass/blocks/modal-popup.scss
@@ -3,7 +3,7 @@
   z-index: 10;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
 
   width: 320px;
   margin: 0 auto;
@@ -68,8 +68,7 @@
   border: 2px solid rgba(68, 68, 68, 0.1);
 }
 
-.modal-popup__size:hover,
-.modal-popup__size:focus {
+.modal-popup__size:hover {
   border: 2px solid rgba(68, 68, 68, 0.3);
 }
 
