--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -8,7 +8,6 @@
   margin: 0 auto;
   padding-top: 90px;
 
-  font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 27px;
   font-weight: bold;
 
@@ -39,7 +38,7 @@
   .page-main::after {
     position: absolute;
     bottom: -3px;
-    left: 9px;
+    left: -15px;
     content: "";
 
     width: 100%;
@@ -74,7 +73,7 @@
 
 @media (min-width: 1150px) {
   .page-main::after {
-    left: 25px;
+    left: 0;
   }
 
   .page-main__title-wrap {
