--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -8,7 +8,7 @@
   align-items: center;
 }
 
-.copyright__link--text {
+.copyright__link-text {
   padding-right: 30px;
   font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 19px;
@@ -19,12 +19,12 @@
   color: $black;
 }
 
-.copyright__link--img {
+.copyright__link-img {
   fill: $seafoam-blue;
 }
 
-.copyright__link:hover .copyright__link--img,
-.copyright__link:focus .copyright__link--img {
+.copyright__link:hover .copyright__link-img,
+.copyright__link:focus .copyright__link-img {
   fill: $greeny-blue-1;
 }
 
