--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -82,6 +82,7 @@
   .promo__description {
     margin-top: 0;
     padding-top: 0;
+    padding-right: 35px;
 
     font-size: 17px;
     line-height: 1.8;
@@ -135,6 +136,10 @@
     flex-basis: 37%;
     padding-top: 56px;
     padding-left: 53px;
+  }
+
+  .promo__description {
+    padding-right: 0;
   }
 
   .promo__image {
