--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -61,23 +61,24 @@
 }
 
 @media (max-width: 767px) {
-  .main-nav--closed .site-list,
-  .main-nav--closed .user-list {
+  .main-nav--closed .main-nav__list {
     display: none;
   }
 
-  .main-nav--opened .main-nav__list {
+  /*.main-nav--opened .main-nav__list {
     display: block;
-  }
+  }*/
+
+  /*выключенный JS*/
 
   .main-nav--nojs .main-nav__toggle {
     display: none;
   }
 
-  .main-nav--nojs .main-nav__list {
+  /*.main-nav--nojs .main-nav__list {
     position: static;
     display: block;
-  }
+  }*/
 }
 
 @media (min-width: 768px) {
