--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -2,6 +2,7 @@
   font-family: "Open Sans";
   src: url("../fonts/opensansbold.woff2") format("woff2");
   src: url("../fonts/opensansbold.woff") format("woff");
+  font-display: swap;
   font-weight: bold;
   font-style: normal;
 }
@@ -10,6 +11,7 @@
   font-family: "Open Sans";
   src: url("../fonts/opensans.woff2") format("woff2");
   src: url("../fonts/opensans.woff") format("woff");
+  font-display: swap;
   font-weight: normal;
   font-style: normal;
 }
