--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -30,30 +30,24 @@
 
 .main-nav__toggle {
   position: absolute;
-  top: 30px;
-  right: 30px;
-  z-index: 3;
+  top: 27px;
+  right: 110px;
 
-  display: block;
   width: 20px;
-  height: 15px;
+  height: 25px;
 
+  background-image: url("../img/icon-menu-close.svg");
   background-color: transparent;
-  border: none;
+  background-repeat: no-repeat;
+  border: 0;
 }
 
-.main-nav--closed .main-nav__toggle::before {
-  position: absolute;
-  top: 0;
-  right: 0;
-  content: url("../img/icon-menu-open.svg");
+.main-nav__toggle--close {
+  display: none;
 }
 
-.main-nav--opened .main-nav__toggle::after {
-  position: absolute;
-  top: -5px;
-  right: 0;
-  content: url("../img/icon-menu-close.svg");
+.main-nav__toggle--open {
+  background-image: url("../img/icon-menu-open.svg");
 }
 
 .main-nav__service {
@@ -61,24 +55,9 @@
 }
 
 @media (max-width: 767px) {
-  .main-nav--closed .main-nav__list {
+  .main-nav--js .main-nav__list {
     display: none;
   }
-
-  /*.main-nav--opened .main-nav__list {
-    display: block;
-  }*/
-
-  /*выключенный JS*/
-
-  .main-nav--nojs .main-nav__toggle {
-    display: none;
-  }
-
-  /*.main-nav--nojs .main-nav__list {
-    position: static;
-    display: block;
-  }*/
 }
 
 @media (min-width: 768px) {
