--- a/source/sass/blocks/catalog-inner.scss
+++ b/source/sass/blocks/catalog-inner.scss
@@ -1,3 +1,7 @@
+.catalog-inner__wrapper {
+  overflow: hidden;
+}
+
 @media (min-width: 1150px) {
   .catalog-inner__wrapper {
     padding-bottom: 30px;
