--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -33,7 +33,6 @@
 .user-list {
   margin: 0;
   padding-left: 0;
-  /*display: none;*/
 }
 
 .user-list__item {
@@ -73,7 +72,7 @@
     margin-right: 30px;
   }
 
-  .user-list__link--note {
+  .user-list__link-note {
     display: none;
   }
 }
