--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -167,6 +167,14 @@
 .order-form__input-user {
   width: 100%;
   padding: 15px 0;
+
+  font-family: "Open Sans", "Tahoma", sans-serif;
+  font-size: 17px;
+  font-weight: normal;
+  line-height: 1;
+
+  color: $greyish-brown;
+
   border: none;
   border-bottom: 2px solid $black;
   background-color: transparent;
@@ -176,19 +184,18 @@
   font-family: "Open Sans", "Tahoma", sans-serif;
   font-size: 17px;
   font-weight: normal;
-
   line-height: 1;
 
   color: $greyish-brown;
   opacity: 0.3;
 }
 
-.order-form__input-info {
-  padding-top: 10px;
-}
-
 input[type="tel"]::placeholder {
   font-size: 19px;
+}
+
+.order-form__input-info {
+  padding-top: 10px;
 }
 
 .order-form__icon {
@@ -368,6 +375,8 @@ input[type="tel"]::placeholder {
     margin-left: 25px;
     padding-top: 0;
     padding-left: 17px;
+
+    font-size: 19px;
   }
 
   .order-form__input-info {
