правки по критериям

--- a/source/sass/blocks/catalog-main.scss
+++ b/source/sass/blocks/catalog-main.scss
@@ -85,6 +85,7 @@
 
 @media (min-width: 768px) {
   .catalog-main {
+    height: 119px;
     position: relative;
     display: flex;
     justify-content: center;
