--- a/source/sass/blocks/catalog-list.scss
+++ b/source/sass/blocks/catalog-list.scss
@@ -87,7 +87,7 @@
 
 @media (min-width: 768px) {
   .catalog-list__item {
-    margin-top: 20px;
+    margin-top: 25px;
     margin-bottom: 55px;
 
     display: flex;
@@ -134,6 +134,10 @@
     line-height: 2;
   }
 
+  .catalog-list__description--toys {
+    padding-bottom: 10px;
+  }
+
   .catalog-list__price {
     font-size: 17px;
     line-height: 1.4;
@@ -170,7 +174,7 @@
   }
 
   .catalog-list__name {
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     padding-right: 0;
   }
 
