--- a/source/sass/blocks/order-form.scss
+++ b/source/sass/blocks/order-form.scss
@@ -6,8 +6,8 @@
   border: none;
 }
 
-.order-form__wrapper--fullname {
-  margin-bottom: -10px;
+.order-form__field-user {
+  padding-bottom: 10px;
 }
 
 .order-form__wrapper--mail {
@@ -38,15 +38,15 @@
   background-color: $seafoam-blue;
 }
 
-.order-form__name--mail::after {
-  width: 179px;
-}
-
 .order-form__set {
   position: relative;
 
   margin: 0;
   padding: 0;
+}
+
+.order-form__set--fullname {
+  margin-top: 25px;
 }
 
 .order-form__item {
@@ -71,7 +71,8 @@
 }
 
 .order-form__item-fullname {
-  padding: 5px 0 0;
+  padding: 0;
+  padding-top: 5px;
 }
 
 .order-form__sign {
@@ -195,7 +196,7 @@ input[type="tel"]::placeholder {
 }
 
 .order-form__input-info {
-  padding-top: 10px;
+  padding-top: 0;
 }
 
 .order-form__icon {
@@ -205,7 +206,7 @@ input[type="tel"]::placeholder {
 .order-form__icon-tel,
 .order-form__icon-mail {
   position: absolute;
-  bottom: 0;
+  top: 0;
   right: 5px;
   opacity: 0.2;
 }
@@ -251,12 +252,12 @@ input[type="tel"]::placeholder {
   }
 
   .order-form__field--fullname {
-    margin-bottom: 0;
-    padding-bottom: 18px;
+    margin-bottom: 15px;
   }
 
   .order-form__field-user {
-    padding-top: 27px;
+    padding-top: 20px;
+    padding-bottom: 0;
   }
 
   .order-form__field--tel,
@@ -274,13 +275,13 @@ input[type="tel"]::placeholder {
   }
 
   .order-form__wrapper--mail {
-    padding-top: 3px;
-    padding-bottom: 25px;
+    padding-top: 0;
+    padding-bottom: 15px;
   }
 
   .order-form__wrapper--textarea {
-    margin-bottom: 15px;
-    padding-top: 5px;
+    margin-bottom: 20px;
+    padding-top: 15px;
   }
 
   .order-form__name::after {
@@ -319,6 +320,7 @@ input[type="tel"]::placeholder {
 
   .order-form__set--fullname {
     width: 100%;
+    margin-top: 0;
   }
 
   .order-form__item--color {
@@ -330,7 +332,7 @@ input[type="tel"]::placeholder {
   }
 
   .order-form__item--interior {
-    margin-bottom: 30px;
+    margin-bottom: 35px;
   }
 
   .order-form__item-fullname {
@@ -429,13 +431,30 @@ input[type="tel"]::placeholder {
 }
 
 @media (min-width: 1150px) {
+  .order-form__field--color {
+    margin-bottom: 42px;
+  }
+
+  .order-form__wrapper--type {
+    margin-bottom: -5px;
+  }
+
+  .order-form__field--fullname {
+    padding-bottom: 0;
+  }
+
   .order-form__wrapper--tel,
   .order-form__wrapper--mail {
     padding-right: 220px;
   }
 
   .order-form__wrapper--textarea {
+    margin-bottom: 9px;
     padding-right: 225px;
+  }
+
+  .order-form__field-user {
+    padding-top: 20px;
   }
 
   .order-form__name {
