--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -101,6 +101,18 @@
     }
   }
 
+  .reviews__wrapper::before {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    z-index: -1;
+
+    content: "";
+    width: 350px;
+    height: 457px;
+    background-color: $white-2;
+  }
+
   .reviews__description {
     padding: 35px 0 60px;
     font-size: 17px;
@@ -151,6 +163,11 @@
     padding-left: 225px;
 
     background-position: 50px 0;
+  }
+
+  .reviews__wrapper::before {
+    top: 0;
+    left: 50px;
   }
 
   .reviews__description {
