--- a/source/sass/blocks/specif-list.scss
+++ b/source/sass/blocks/specif-list.scss
@@ -3,23 +3,19 @@
 }
 
 .specif-list__item td {
-  padding: 7px 30px 7px 0;
+  padding: 7px 27px 7px 0;
   border-bottom: 1px solid $white-2;
 }
 
 @media (min-width: 768px) {
-  .specif-list__item td {
-    padding-top: 10px;
-    padding-right: 0;
-  }
-
   .specif-list {
-    margin-top: 10px;
+    width: 280px;
+    margin-top: 12px;
   }
 }
 
 @media (min-width: 1150px) {
   .specif-list {
-    margin-top: 25px;
+    margin-top: 27px;
   }
 }
